--- a/lambda-chat/Dockerfile
+++ b/lambda-chat/Dockerfile
@@ -10,9 +10,9 @@ COPY . ..
 RUN /var/lang/bin/python3.9 -m pip install --upgrade pip
 
 RUN /var/lang/bin/python3 -m pip install PyPDF2
-RUN /var/lang/bin/python3 -m pip install langchain==0.0.249
+RUN /var/lang/bin/python3 -m pip install langchain
 RUN /var/lang/bin/python3 -m pip install faiss-cpu
-RUN /var/lang/bin/python3 -m pip install opensearch-py==2.3.0
+RUN /var/lang/bin/python3 -m pip install opensearch-py
 
 RUN /var/lang/bin/python3 -m pip install -U /var/task/bedrock-sdk/botocore-1.29.162-py3-none-any.whl -t /var/task
 RUN rm -rf /var/task/bedrock-sdk
