--- a/lambda-chat-ws/Dockerfile
+++ b/lambda-chat-ws/Dockerfile
@@ -11,6 +11,7 @@ RUN /var/lang/bin/python3.11 -m pip install --upgrade pip
 RUN /var/lang/bin/python3 -m pip install PyPDF2
 RUN /var/lang/bin/python3 -m pip install langchain
 RUN /var/lang/bin/python3 -m pip install unstructured
+RUN /var/lang/bin/python3 -m pip install faiss-gpu
 
 RUN /var/lang/bin/python3 -m pip install botocore --upgrade
 RUN /var/lang/bin/python3 -m pip install boto3 --upgrade
