--- a/lambda-chat-ws/Dockerfile
+++ b/lambda-chat-ws/Dockerfile
@@ -15,6 +15,7 @@ RUN /var/lang/bin/python3 -m pip install opensearch-py
 RUN /var/lang/bin/python3 -m pip install faiss-cpu
 RUN /var/lang/bin/python3 -m pip install google-api-python-client
 RUN /var/lang/bin/python3 -m pip install anthropic
+RUN /var/lang/bin/python3 -m pip install python-pptx
 
 RUN /var/lang/bin/python3 -m pip install botocore --upgrade
 RUN /var/lang/bin/python3 -m pip install boto3 --upgrade
