--- a/lambda-s3-event/Dockerfile
+++ b/lambda-s3-event/Dockerfile
@@ -6,5 +6,6 @@ COPY lambda_function.py /var/task/
 COPY . ..
 
 RUN /var/lang/bin/python3 -m pip install opensearch-py
+RUN /var/lang/bin/python3 -m pip install PyPDF2
 
 CMD ["lambda_function.lambda_handler"]
