--- a/lambda-s3-event/Dockerfile
+++ b/lambda-s3-event/Dockerfile
@@ -7,5 +7,7 @@ COPY . ..
 
 RUN /var/lang/bin/python3 -m pip install opensearch-py
 RUN /var/lang/bin/python3 -m pip install PyPDF2
+RUN /var/lang/bin/python3 -m pip install python-pptx
+RUN /var/lang/bin/python3 -m pip install python-docx
 
 CMD ["lambda_function.lambda_handler"]
