--- a/lambda-document-manager/Dockerfile
+++ b/lambda-document-manager/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /var/task/lambda-chat
 COPY lambda_function.py /var/task/
 COPY . ..
 
-RUN /var/lang/bin/python3 -m pip install langchain
+RUN /var/lang/bin/python3 -m pip install langchain, langchain-community
 RUN /var/lang/bin/python3 -m pip install opensearch-py
 RUN /var/lang/bin/python3 -m pip install PyPDF2
 RUN /var/lang/bin/python3 -m pip install python-pptx
