--- a/lambda-document-manager/Dockerfile
+++ b/lambda-document-manager/Dockerfile
@@ -9,6 +9,7 @@ RUN /var/lang/bin/python3 -m pip install langchain
 RUN /var/lang/bin/python3 -m pip install langchain-community
 RUN /var/lang/bin/python3 -m pip install opensearch-py
 RUN /var/lang/bin/python3 -m pip install PyPDF2
+RUN /var/lang/bin/python3 -m pip install pycryptodome
 RUN /var/lang/bin/python3 -m pip install python-pptx
 RUN /var/lang/bin/python3 -m pip install python-docx
 
