--- a/lambda-chat-ws/Dockerfile
+++ b/lambda-chat-ws/Dockerfile
@@ -9,7 +9,7 @@ COPY . ..
 RUN /var/lang/bin/python3.11 -m pip install --upgrade pip
 
 RUN /var/lang/bin/python3 -m pip install PyPDF2
-#RUN /var/lang/bin/python3 -m pip install langchain
+RUN /var/lang/bin/python3 -m pip install langchain
 RUN /var/lang/bin/python3 -m pip install -U langchain-community
 RUN /var/lang/bin/python3 -m pip install unstructured
 RUN /var/lang/bin/python3 -m pip install opensearch-py
