--- a/lambda-document-manager/Dockerfile
+++ b/lambda-document-manager/Dockerfile
@@ -7,6 +7,7 @@ COPY . ..
 
 RUN /var/lang/bin/python3 -m pip install langchain
 RUN /var/lang/bin/python3 -m pip install langchain-community
+RUN /var/lang/bin/python3 -m pip install langchain-aws
 RUN /var/lang/bin/python3 -m pip install opensearch-py
 RUN /var/lang/bin/python3 -m pip install PyPDF2
 RUN /var/lang/bin/python3 -m pip install pycryptodome
