--- a/lambda-chat-ws/Dockerfile
+++ b/lambda-chat-ws/Dockerfile
@@ -19,6 +19,7 @@ RUN /var/lang/bin/python3 -m pip install google-api-python-client
 RUN /var/lang/bin/python3 -m pip install anthropic
 RUN /var/lang/bin/python3 -m pip install python-pptx
 RUN /var/lang/bin/python3 -m pip install python-docx
+RUN /var/lang/bin/python3 -m pip install pytz
 
 RUN /var/lang/bin/python3 -m pip install botocore --upgrade
 RUN /var/lang/bin/python3 -m pip install boto3 --upgrade
